# pySigma-backend-carbonblack

./: README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
sigma/backends/carbonblack/: __init__.py  carbonblack.py
sigma/pipelines/carbonblack/: __init__.py  carbonblack.py
tests/: test_backend_carbonblack.py  test_pipelines_carbonblack.py
workflows/: release.yml  test.yml
