[tool.poetry]
name = "pySigma-backend-carbonblack"
version = "0.0.0"
description = "pySigma carbonblack backend"
authors = ["Cori Smith <cs2718281@gmail.com>"]
license = "MIT"
repository = "https://github.com/7RedViolin/pySigma-backend-carbonblack"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = ">=0.9.6"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
coverage = "^7.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
metadata = false
dirty = false

[tool.poetry-dynamic-versioning.substitution]
files = ["sigma/backends/carbonblack/__init__.py"]